Closes #1246 - Integrate OpenCensus-OpenTelemetry-Bridge (#1270)