@@ -10,7 +10,11 @@ test {
     useJUnitPlatform()
 
     jvmArgs '-Xmx512m', '-XX:+HeapDumpOnOutOfMemoryError', '-XX:HeapDumpPath=/__w/inspectit-ocelot/inspectit-ocelot/test_heapdump.bin'
-
+    // enable reflection used in relation with OpenTelemetry for JDK 11 and later
+    if(JavaVersion.current() >= JavaVersion.VERSION_11) {
+        // --add-opens has the following syntax: {A}/{package}={B}
+        jvmArgs "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED"
+    }
     testLogging {
         exceptionFormat = 'full'
     }
@@ -21,9 +25,20 @@ sourceCompatibility = 1.8
 dependencies {
     compileOnly(
             project(':inspectit-ocelot-bootstrap'),
-            "io.opencensus:opencensus-api:${openCensusVersion}",
-            "io.opencensus:opencensus-impl:${openCensusVersion}",
-            'org.projectlombok:lombok:1.18.12'
+            'org.projectlombok:lombok:1.18.12',
+
+            // OpenTelemetry
+            platform("io.opentelemetry:opentelemetry-bom:${openTelemetryVersion}"),
+            platform("io.opentelemetry:opentelemetry-bom-alpha:${openTelemetryAlphaVersion}"),
+            'io.opentelemetry:opentelemetry-api',
+            'io.opentelemetry:opentelemetry-api-metrics',
+            "io.opentelemetry:opentelemetry-sdk",
+            "io.opentelemetry:opentelemetry-sdk-metrics",
+            "io.opentelemetry:opentelemetry-semconv",
+            // OC-OTel bridge
+            "io.opentelemetry:opentelemetry-opencensus-shim",
+
+
     )
     buildTools(
             'jarcheck:jarcheck:1.5'
@@ -56,14 +71,16 @@ dependencies {
 
             'org.javassist:javassist:3.24.1-GA',
 
-            // OpenCensus exporters
-            "io.opencensus:opencensus-exporter-stats-prometheus:${openCensusVersion}",
+            // Metrics exporters
             "io.prometheus:simpleclient_httpserver:${prometheusClientVersion}",
-            "io.opencensus:opencensus-exporter-trace-zipkin:${openCensusVersion}",
-            "io.opencensus:opencensus-exporter-trace-jaeger:${openCensusVersion}",
-            "io.opencensus:opencensus-exporter-metrics-ocagent:${openCensusVersion}",
 
-            "io.opencensus:opencensus-exporter-trace-ocagent:${openCensusVersion}",
+            // we still need the OpenCensus SDK for the metric exporters to work, as the shim only includes opencensus-impl-core
+            "io.opencensus:opencensus-impl:${openCensusVersion}",
+
+            // OpenTelemetry exporters
+            platform("io.opentelemetry:opentelemetry-bom:${openTelemetryVersion}"),
+            "io.opentelemetry:opentelemetry-exporter-logging",
+
             // The following dependency is required for the OC-exporter to work correctly and must be matched against the grpc version
             // See https://github.com/census-instrumentation/opencensus-java/blob/master/exporters/trace/ocagent/README.md
             "io.netty:netty-tcnative-boringssl-static:${tcnativeVersion}",
@@ -71,15 +88,17 @@ dependencies {
             "rocks.inspectit:opencensus-influxdb-exporter:1.2",
 
             // bytecode manipulation
-            "net.bytebuddy:byte-buddy:1.11.15",
-
-            // use older gson version than v2.8.6 (what OC v0.26+ uses), as v2.8.6 does not work with checkDependencyJavaVersions, see https://github.com/google/gson/issues/1627
-            "com.google.code.gson:gson:2.8.5!!"
+            "net.bytebuddy:byte-buddy:1.11.15"
     )
 
     testImplementation(
             project(':inspectit-ocelot-bootstrap'),
-            "io.opencensus:opencensus-impl:${openCensusVersion}",
+            platform("io.opentelemetry:opentelemetry-bom:${openTelemetryVersion}"),
+            platform("io.opentelemetry:opentelemetry-bom-alpha:${openTelemetryAlphaVersion}"),
+            "io.opentelemetry:opentelemetry-sdk",
+            "io.opentelemetry:opentelemetry-opencensus-shim",
+            "io.opentelemetry:opentelemetry-semconv",
+            "io.opentelemetry:opentelemetry-sdk-testing",
 
             // matching the spring-core version used in the currently used version of spring boot version
             'org.springframework:spring-test:5.3.14',
@@ -87,6 +106,10 @@ dependencies {
             'org.junit.jupiter:junit-jupiter-api:5.8.2',
             'org.mockito:mockito-junit-jupiter:4.2.0',
 
+            // to make use of SpyBean
+            "org.springframework.boot:spring-boot-test:2.1.4.RELEASE",
+            // LogCapturer
+            "io.github.netmikey.logunit:logunit-jul:1.1.0",
             'org.apache.httpcomponents:httpclient:4.5.6',
             "org.mockito:mockito-core:${mockitoVersion}",
             'org.assertj:assertj-core:3.11.1',
@@ -109,7 +132,11 @@ dependencies {
 
 // use jarCheck to make sure all classes in our dependencies are at maximum in version 1.8
 task checkDependencyJavaVersions {
-    def excludes = ["byte-buddy"]
+    def excludes = ["byte-buddy",
+                    // exclude OpenTelemetry as they guarantee JDK 8 support
+                    "opentelemetry",
+                    // exclude jackson which is being used by OTel
+                    "jackson"]
 
     def jarCheckPath = "$buildDir/jarCheck"
     outputs.dir jarCheckPath
